# digitalArtAPI

./: README.md  db.sqlite3  digitalArtAPI.docx  manage.py  pyproject.toml
comment/: models.py  serializer.py  views.py
comment/migrations/: 0001_initial.py
digitalArt/: asgi.py  settings.py  urls.py  wsgi.py
digitalArt/digitalArt/: settings.py
favourites/: admin.py  models.py  serializer.py  views.py
favourites/migrations/: 0001_initial.py
post/: models.py  serializer.py  views.py
post/migrations/: 0001_initial.py  0002_auto_20200407_1105.py  0003_auto_20200416_0834.py  0004_auto_20200416_0835.py  0005_comment_post.py  0006_remove_post_image.py  0007_post_image.py  0008_delete_comment.py  0009_auto_20200711_1306.py  0010_auto_20200714_1158.py
tag/: models.py  serializer.py
tag/migrations/: 0001_initial.py
uploadImage/: admin.py  models.py  serializer.py  views.py
uploadImage/migrations/: 0001_initial.py
user/: models.py  permissions.py  serializer.py  views.py
user/migrations/: 0001_initial.py
